--- a/build.gradle
+++ b/build.gradle
@@ -17,15 +17,15 @@ plugins {
     id 'groovy'
     id 'idea'
     id 'java-gradle-plugin'
-    id "nebula.facet" version "3.4.0"
-    id 'com.gradle.plugin-publish' version '0.10.0'
+    id 'com.gradle.plugin-publish' version '0.20.0'
+}
+
+repositories {
+    mavenCentral()
 }
 
 group = 'org.gradle.crypto'
-version = '1.2.0'
-
-targetCompatibility = '1.7'
-sourceCompatibility = '1.7'
+version = '1.3.0'
 
 // Fix a bad interaction with IntelliJ and Gradle > 4.0
 idea.module.inheritOutputDirs = true
@@ -33,28 +33,57 @@ idea.module.inheritOutputDirs = true
 // make the publishing plugin skip checks that disallow publishing to com.gradle / org.gradle groups
 System.setProperty('gradle.publish.skip.namespace.check', 'true')
 
-repositories {
-    jcenter()
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(8)
+    }
+}
+
+testing {
+    suites {
+        test {
+            useJUnitJupiter('5.7.1')
+        }
+
+        functionalTest(JvmTestSuite) {
+            sources {
+                java {
+                    srcDirs = ['src/functionalTest/groovy']
+                }
+            }
+
+            dependencies {
+                implementation project
+                implementation ('org.spockframework:spock-junit4:2.0-groovy-3.0')
+                implementation ('org.spockframework:spock-core:2.0-groovy-3.0') {
+                    exclude group: 'org.codehaus.groovy'
+                }
+            }
+
+            targets {
+                all {
+                    testTask.configure {
+                        shouldRunAfter(test)
+                    }
+                }
+            }
+        }
+    }
+}
+
+tasks.named('check') {
+    dependsOn(testing.suites.functionalTest)
 }
 
 dependencies {
-    compile 'com.google.guava:guava:20.0'
-    testImplementation ('org.spockframework:spock-core:1.1-groovy-2.4') {
-        exclude module: 'groovy-all'
-    }
-}
-
-facets {
-    functionalTest {
-        parentSourceSet = 'test'
-    }
+    api('com.google.guava:guava:31.0.1-jre')
 }
 
 gradlePlugin {
     plugins {
         checksumPlugin {
-            id = "org.gradle.crypto.checksum"
-            implementationClass = "org.gradle.crypto.checksum.ChecksumPlugin"
+            id = 'org.gradle.crypto.checksum'
+            implementationClass = 'org.gradle.crypto.checksum.ChecksumPlugin'
         }
     }
     testSourceSets sourceSets.functionalTest
