--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ repositories {
 }
 
 group = 'org.gradle.crypto'
-version = '1.4.0'
+version = '1.5.0-SNAPSHOT'
 
 // Fix a bad interaction with IntelliJ and Gradle > 4.0
 idea.module.inheritOutputDirs = true
